// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnionSchema denormalization denormalizes an array of multiple entities using a function to infer the schemaAttribute 1`] = `
[
  User {
    "id": "1",
    "type": "users",
    "username": "Janey",
  },
  true,
  false,
]
`;

exports[`UnionSchema denormalization denormalizes an array of multiple entities using a function to infer the schemaAttribute 2`] = `
[
  User {
    "id": "1",
    "type": "users",
    "username": "Janey",
  },
  true,
  false,
]
`;

exports[`UnionSchema denormalization denormalizes an array of multiple entities using a function to infer the schemaAttribute 3`] = `
[
  Group {
    "groupname": "People",
    "id": "2",
    "type": "groups",
  },
  true,
  false,
]
`;

exports[`UnionSchema denormalization denormalizes an array of multiple entities using a function to infer the schemaAttribute 4`] = `
[
  Group {
    "groupname": "People",
    "id": "2",
    "type": "groups",
  },
  true,
  false,
]
`;

exports[`UnionSchema denormalization denormalizes an object using string schemaAttribute 1`] = `
[
  User {
    "id": "1",
    "type": "users",
    "username": "Janey",
  },
  true,
  false,
]
`;

exports[`UnionSchema denormalization denormalizes an object using string schemaAttribute 2`] = `
[
  User {
    "id": "1",
    "type": "users",
    "username": "Janey",
  },
  true,
  false,
]
`;

exports[`UnionSchema denormalization denormalizes an object using string schemaAttribute 3`] = `
[
  Group {
    "groupname": "People",
    "id": "2",
    "type": "groups",
  },
  true,
  false,
]
`;

exports[`UnionSchema denormalization denormalizes an object using string schemaAttribute 4`] = `
[
  Group {
    "groupname": "People",
    "id": "2",
    "type": "groups",
  },
  true,
  false,
]
`;

exports[`UnionSchema denormalization returns the original value when no schema is given 1`] = `
[
  {
    "id": "1",
  },
  true,
  false,
]
`;

exports[`UnionSchema denormalization returns the original value when no schema is given 2`] = `
[
  Immutable.Map {
    "id": "1",
  },
  true,
  false,
]
`;

exports[`UnionSchema denormalization returns the original value when string is given 1`] = `
[
  "1",
  true,
  false,
]
`;

exports[`UnionSchema normalization normalizes an array of multiple entities using a function to infer the schemaAttribute 1`] = `
{
  "entities": {
    "User": {
      "1": {
        "id": "1",
        "username": "Janey",
      },
    },
  },
  "entityMeta": {
    "User": {
      "1": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": {
    "id": "1",
    "schema": "users",
  },
}
`;

exports[`UnionSchema normalization normalizes an array of multiple entities using a function to infer the schemaAttribute 2`] = `
{
  "entities": {
    "Group": {
      "2": {
        "groupname": "People",
        "id": "2",
      },
    },
  },
  "entityMeta": {
    "Group": {
      "2": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": {
    "id": "2",
    "schema": "groups",
  },
}
`;

exports[`UnionSchema normalization normalizes an array of multiple entities using a function to infer the schemaAttribute 3`] = `
{
  "entities": {},
  "entityMeta": {},
  "indexes": {},
  "result": {
    "id": "3",
    "notdefined": "yep",
  },
}
`;

exports[`UnionSchema normalization normalizes an object using string schemaAttribute 1`] = `
{
  "entities": {
    "User": {
      "1": {
        "id": "1",
        "type": "users",
      },
    },
  },
  "entityMeta": {
    "User": {
      "1": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": {
    "id": "1",
    "schema": "users",
  },
}
`;

exports[`UnionSchema normalization normalizes an object using string schemaAttribute 2`] = `
{
  "entities": {
    "Group": {
      "2": {
        "id": "2",
        "type": "groups",
      },
    },
  },
  "entityMeta": {
    "Group": {
      "2": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": {
    "id": "2",
    "schema": "groups",
  },
}
`;

exports[`complex case works with undefined 1`] = `
{
  "entities": {
    "ContinuousSequence": {
      "22": {
        "group_a_stats": {
          "count": 79557,
          "sum": 3727219.2099861577,
        },
        "group_b_stats": {
          "count": 66794,
          "sum": 2999496.370384956,
        },
        "sequence_id": 22,
        "sequence_type": "temporal_mean_shift",
        "subpops_group_a_incremental_stats": [
          {
            "count": 19302,
            "sum": 909835.9502538516,
          },
          {
            "count": 12452,
            "sum": 468902.2598208785,
          },
          {
            "count": 29674,
            "sum": 1533126.7700431347,
          },
          {
            "count": 3979,
            "sum": 123931.08003079893,
          },
          {
            "count": 3501,
            "sum": 173706.13005542755,
          },
        ],
        "subpops_group_a_stats": [
          {
            "count": 19302,
            "sum": 909835.9502538516,
          },
          {
            "count": 15550,
            "sum": 656345.8200406507,
          },
          {
            "count": 38523,
            "sum": 1767670.8099250195,
          },
          {
            "count": 15778,
            "sum": 549563.3501347005,
          },
          {
            "count": 20194,
            "sum": 951307.5302157328,
          },
        ],
        "subpops_group_b_incremental_stats": [
          {
            "count": 16022,
            "sum": 686623.8400082085,
          },
          {
            "count": 10427,
            "sum": 632778.0701571181,
          },
          {
            "count": 25270,
            "sum": 1002223.6299012974,
          },
          {
            "count": 3386,
            "sum": 104987.2500332594,
          },
          {
            "count": 2893,
            "sum": 139013.64997577667,
          },
        ],
        "subpops_group_b_stats": [
          {
            "count": 16022,
            "sum": 686623.8400082085,
          },
          {
            "count": 12964,
            "sum": 713309.7901891638,
          },
          {
            "count": 32773,
            "sum": 1542281.990038909,
          },
          {
            "count": 12722,
            "sum": 423195.7500065565,
          },
          {
            "count": 17110,
            "sum": 768182.7200815715,
          },
        ],
        "subpopulations": [
          [
            {
              "absolute_range": null,
              "factor_type": "value",
              "keyword": null,
              "percentile_range": null,
              "value": {
                "column": "loyalty_program",
                "data_type": "string",
                "value": "none",
              },
            },
          ],
          [
            {
              "absolute_range": null,
              "factor_type": "value",
              "keyword": null,
              "percentile_range": null,
              "value": {
                "column": "coupon_code",
                "data_type": "string",
                "value": "01DEC2019PROMO",
              },
            },
          ],
          [
            {
              "absolute_range": null,
              "factor_type": "value",
              "keyword": null,
              "percentile_range": null,
              "value": {
                "column": "loyalty_program",
                "data_type": "string",
                "value": "silver",
              },
            },
          ],
          [
            {
              "absolute_range": null,
              "factor_type": "value",
              "keyword": null,
              "percentile_range": null,
              "value": {
                "column": "ad_shown",
                "data_type": "string",
                "value": "week52_20",
              },
            },
          ],
          [
            {
              "absolute_range": null,
              "factor_type": "value",
              "keyword": null,
              "percentile_range": null,
              "value": {
                "column": "day_part",
                "data_type": "string",
                "value": "afternoon",
              },
            },
          ],
        ],
      },
    },
  },
  "entityMeta": {
    "ContinuousSequence": {
      "22": {
        "date": 1557831718135,
        "expiresAt": Infinity,
        "fetchedAt": 0,
      },
    },
  },
  "indexes": {},
  "result": {
    "sequences": [
      null,
      undefined,
      {
        "id": "22",
        "schema": "temporal_mean_shift",
      },
    ],
  },
}
`;

exports[`complex case works with undefined 2`] = `
[
  {
    "sequences": [
      null,
      ContinuousSequence {
        "group_a_stats": {
          "count": 79557,
          "sum": 3727219.2099861577,
        },
        "group_b_stats": {
          "count": 66794,
          "sum": 2999496.370384956,
        },
        "sequence_id": 22,
        "sequence_type": "temporal_mean_shift",
        "subpops_group_a_incremental_stats": [
          {
            "count": 19302,
            "sum": 909835.9502538516,
          },
          {
            "count": 12452,
            "sum": 468902.2598208785,
          },
          {
            "count": 29674,
            "sum": 1533126.7700431347,
          },
          {
            "count": 3979,
            "sum": 123931.08003079893,
          },
          {
            "count": 3501,
            "sum": 173706.13005542755,
          },
        ],
        "subpops_group_a_stats": [
          {
            "count": 19302,
            "sum": 909835.9502538516,
          },
          {
            "count": 15550,
            "sum": 656345.8200406507,
          },
          {
            "count": 38523,
            "sum": 1767670.8099250195,
          },
          {
            "count": 15778,
            "sum": 549563.3501347005,
          },
          {
            "count": 20194,
            "sum": 951307.5302157328,
          },
        ],
        "subpops_group_b_incremental_stats": [
          {
            "count": 16022,
            "sum": 686623.8400082085,
          },
          {
            "count": 10427,
            "sum": 632778.0701571181,
          },
          {
            "count": 25270,
            "sum": 1002223.6299012974,
          },
          {
            "count": 3386,
            "sum": 104987.2500332594,
          },
          {
            "count": 2893,
            "sum": 139013.64997577667,
          },
        ],
        "subpops_group_b_stats": [
          {
            "count": 16022,
            "sum": 686623.8400082085,
          },
          {
            "count": 12964,
            "sum": 713309.7901891638,
          },
          {
            "count": 32773,
            "sum": 1542281.990038909,
          },
          {
            "count": 12722,
            "sum": 423195.7500065565,
          },
          {
            "count": 17110,
            "sum": 768182.7200815715,
          },
        ],
        "subpopulations": [
          [
            {
              "absolute_range": null,
              "factor_type": "value",
              "keyword": null,
              "percentile_range": null,
              "value": {
                "column": "loyalty_program",
                "data_type": "string",
                "value": "none",
              },
            },
          ],
          [
            {
              "absolute_range": null,
              "factor_type": "value",
              "keyword": null,
              "percentile_range": null,
              "value": {
                "column": "coupon_code",
                "data_type": "string",
                "value": "01DEC2019PROMO",
              },
            },
          ],
          [
            {
              "absolute_range": null,
              "factor_type": "value",
              "keyword": null,
              "percentile_range": null,
              "value": {
                "column": "loyalty_program",
                "data_type": "string",
                "value": "silver",
              },
            },
          ],
          [
            {
              "absolute_range": null,
              "factor_type": "value",
              "keyword": null,
              "percentile_range": null,
              "value": {
                "column": "ad_shown",
                "data_type": "string",
                "value": "week52_20",
              },
            },
          ],
          [
            {
              "absolute_range": null,
              "factor_type": "value",
              "keyword": null,
              "percentile_range": null,
              "value": {
                "column": "day_part",
                "data_type": "string",
                "value": "afternoon",
              },
            },
          ],
        ],
      },
    ],
  },
  true,
  false,
]
`;
